--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,13 @@
-cmake_minimum_required(VERSION 3.5)
-project(helmath_test)
-
 add_subdirectory(lib/googletest)
-add_subdirectory(vec3/vec3_float_tests)
-add_subdirectory(vec3/vec3_double_tests)
-add_subdirectory(vec3/vec3_int_tests)
+add_subdirectory(vector)
+
+add_executable(all_tests
+        vector/vec2/vec2_swizzle_tests.cpp
+        vector/vec3/vec3_double_tests.cpp
+        vector/vec3/vec3_float_tests.cpp
+        vector/vec3/vec3_int_tests.cpp)
+
+target_link_libraries(all_tests
+        gtest
+        gtest_main
+        helmath)
