--- a/tests/vector/vec2/CMakeLists.txt
+++ b/tests/vector/vec2/CMakeLists.txt
@@ -1,8 +1,8 @@
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(vec3_double_tests vec3_double_tests.cpp)
+add_executable(vec2_swizzle_tests vec2_swizzle_tests.cpp)
 
-target_link_libraries(vec3_double_tests
+target_link_libraries(vec2_swizzle_tests
         gtest
         gtest_main
         helmath)
