--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
-            - cmake-3.5
+            - cmake
       env: COMPILER=g++-4.9
     - compiler: gcc
       addons:
@@ -18,7 +18,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-            - cmake-3.5
+            - cmake
       env: COMPILER=g++-5
     - compiler: clang
       addons:
@@ -28,7 +28,7 @@ matrix:
             - llvm-toolchain-precise-3.6
           packages:
             - clang-3.6
-            - cmake-3.5
+            - cmake
       env: COMPILER=clang++-3.6
     - compiler: clang
       addons:
@@ -38,7 +38,7 @@ matrix:
             - llvm-toolchain-precise-3.7
           packages:
             - clang-3.7
-            - cmake-3.5
+            - cmake
       env: COMPILER=clang++-3.7
 
 before_script:
