--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,14 @@ matrix:
       env: COMPILER=clang++-3.7
 
 before_script:
+    - if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+        CMAKE_URL="http://www.cmake.org/files/v3.5/cmake-3.5.1-Linux-x86_64.tar.gz"
+        mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+        export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+      elif [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
+        # implicit deps, but seem to be installed by default with recent images: libxml2 GDAL boost
+        brew install cmake libzip libstxxl lua51 luabind tbb md5sha1sum ccache
+      fi
     - mkdir build
     - cd build
     - cmake ..
