Started the implementation of Vec4 unit tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(all_tests
         vector/vec2/vec2_swizzle_tests.cpp
         vector/vec3/vec3_double_tests.cpp
         vector/vec3/vec3_float_tests.cpp
-        vector/vec3/vec3_int_tests.cpp vector/vec3/vec3_swizzle_tests.cpp)
+        vector/vec3/vec3_int_tests.cpp vector/vec3/vec3_swizzle_tests.cpp vector/vec4/vec4_swizzle_tests.cpp)
 
 target_link_libraries(all_tests
         gtest
