Moved all the vector operator overloads inside their respective classes. Removed the vector.cpp file so for now the library is header only. Modified the CMakeLists.txt files to accommodate the changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ include_directories(src)
 
 add_subdirectory(tests)
 
-set(SOURCE_FILES
-        src/helmath.h
-        src/vector.h
-        src/vector.cpp)
-
-add_library(helmath ${SOURCE_FILES})
+#set(SOURCE_FILES
+#        src/helmath.h
+#        src/vector.h
+#        )
+#
+#add_library(helmath ${SOURCE_FILES})
