Renamed all the swizzle classes to _Swizzle. Added constness to operator overloads that did not affect the class. Implemented dot, cross and reflect functions inside the vector classes for flexibility. Started adding Doxygen documentation. Unit tested the new functions.

--- a/tests/vector/vec3/CMakeLists.txt
+++ b/tests/vector/vec3/CMakeLists.txt
@@ -1,19 +1,9 @@
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(vec3_double_tests vec3_double_tests.cpp)
-add_executable(vec3_float_tests vec3_float_tests.cpp)
-add_executable(vec3_int_tests vec3_int_tests.cpp)
+add_executable(vec3_tests vec3_tests.cpp vec3_tests.cpp)
 add_executable(vec3_swizzle_tests vec3_swizzle_tests.cpp)
 
-target_link_libraries(vec3_double_tests
-        gtest
-        gtest_main)
-
-target_link_libraries(vec3_float_tests
-        gtest
-        gtest_main)
-
-target_link_libraries(vec3_int_tests
+target_link_libraries(vec3_tests
         gtest
         gtest_main)
 
