Renamed vector classes from Vec to Vector to improve documentation readability. Verbosity is reduced by the typedefs. Started the implementation of the Matrix classes.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,17 @@
 add_subdirectory(lib/googletest)
 add_subdirectory(vector)
+add_subdirectory(matrix)
 
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 add_executable(all_tests
         vector/vec2/vec2_swizzle_tests.cpp
-        vector/vec3/vec3_swizzle_tests.cpp vector/vec4/vec4_swizzle_tests.cpp vector/vec3/vec3_tests.cpp ../src/include/internal/swizzle.h ../src/include/internal/swizzle_class_macros.h)
+        vector/vec3/vec3_swizzle_tests.cpp
+        vector/vec4/vec4_swizzle_tests.cpp
+        vector/vec3/vec3_tests.cpp
+        ../src/include/internal/swizzle.h
+        ../src/include/internal/swizzle_class_macros.h
+        ../src/include/matrix.h)
 
 target_link_libraries(all_tests
         gtest
