Finished the Vector2 and Vector4 unit tests. Added extra documentation and corrected documentation mistakes. Renamed all "mat" filename occurrences to matrix and "vec" filename occurrences to vector.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,13 +5,15 @@ add_subdirectory(matrix)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 add_executable(all_tests
-        vector/vec2/vec2_swizzle_tests.cpp
-        vector/vec3/vec3_swizzle_tests.cpp
-        vector/vec4/vec4_swizzle_tests.cpp
-        vector/vec3/vec3_tests.cpp
+        vector/vector2/vector2_swizzle_tests.cpp
+        vector/vector3/vector3_swizzle_tests.cpp
+        vector/vector4/vector4_swizzle_tests.cpp
+        vector/vector3/vector3_tests.cpp
         ../src/include/internal/swizzle.h
         ../src/include/internal/swizzle_class_macros.h
-        ../src/include/matrix.h)
+        ../src/include/matrix.h
+        vector/vector2/vector2_tests.cpp
+        vector/vector4/vector4_tests.cpp)
 
 target_link_libraries(all_tests
         gtest
