--- a/tests/matrix/matrix2/CMakeLists.txt
+++ b/tests/matrix/matrix2/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(mat2_tests mat2_tests.cpp)
+add_executable(mat2_tests matrix2_tests.cpp)
 
 target_link_libraries(mat2_tests
         gtest
