--- a/tests/vector/CMakeLists.txt
+++ b/tests/vector/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_subdirectory(vec2)
-add_subdirectory(vec3)
-add_subdirectory(vec4)
+add_subdirectory(vector2)
+add_subdirectory(vector3)
+add_subdirectory(vector4)
