Implemented the subscript operator overload, the multiplication operator overload and the assignment operator overload for Matrix2. Implemented the translate, translated and set_translation, scale, scaled, set_scaling transpose, transposed functions as well as the equality, non-equality, subscript and multiplication operator overloads for Matrix3 and Matrix4. Re-enforced constness across the board. Implemented additional unit tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,12 +8,11 @@ add_executable(all_tests
         vector/vector2/vector2_swizzle_tests.cpp
         vector/vector3/vector3_swizzle_tests.cpp
         vector/vector4/vector4_swizzle_tests.cpp
-        vector/vector3/vector3_tests.cpp
-        ../src/include/internal/swizzle.h
-        ../src/include/internal/swizzle_class_macros.h
-        ../src/include/matrix.h
         vector/vector2/vector2_tests.cpp
-        vector/vector4/vector4_tests.cpp)
+        vector/vector3/vector3_tests.cpp
+        vector/vector4/vector4_tests.cpp
+        matrix/matrix2/matrix2_tests.cpp
+        matrix/matrix3/matrix3_tests.cpp matrix/matrix4/matrix4_tests.cpp)
 
 target_link_libraries(all_tests
         gtest
