Implemented implicit conversion to pointer in the Matrix classes. All the functions that took an array as a parameter now use a named array reference so that they will not decay to a pointer. Implemented additional operator overloads for Matrix3 and Matrix4. Implemented the transform and transformed functions for Vector3 and Vector4. Unit tested.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,11 @@ project(helmath)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-include_directories(src/include src/include/internal)
+include_directories(src/include)
 
 add_subdirectory(tests)
 
-#set(SOURCE_FILES
-#        src/helmath.h
-#        src/vector.h
-#        )
-#
-#add_library(helmath ${SOURCE_FILES})
+set(SOURCE_FILES
+        src/helmath.cpp)
+
+add_library(helmath ${SOURCE_FILES})
