--- a/tests/matrix/matrix2/CMakeLists.txt
+++ b/tests/matrix/matrix2/CMakeLists.txt
@@ -4,4 +4,5 @@ add_executable(matrix2_tests matrix2_tests.cpp)
 
 target_link_libraries(matrix2_tests
         gtest
-        gtest_main)
+        gtest_main
+        helmath)
