--- a/tests/matrix/matrix3/CMakeLists.txt
+++ b/tests/matrix/matrix3/CMakeLists.txt
@@ -4,4 +4,5 @@ add_executable(matrix3_tests matrix3_tests.cpp)
 
 target_link_libraries(matrix3_tests
         gtest
-        gtest_main)
+        gtest_main
+        helmath)
