--- a/tests/matrix/matrix4/CMakeLists.txt
+++ b/tests/matrix/matrix4/CMakeLists.txt
@@ -4,4 +4,5 @@ add_executable(matrix4_tests matrix4_tests.cpp)
 
 target_link_libraries(matrix4_tests
         gtest
-        gtest_main)
+        gtest_main
+        helmath)
