--- a/tests/vector/vector4/CMakeLists.txt
+++ b/tests/vector/vector4/CMakeLists.txt
@@ -5,8 +5,10 @@ add_executable(vector4_swizzle_tests vector4_swizzle_tests.cpp)
 
 target_link_libraries(vector4_tests
         gtest
-        gtest_main)
+        gtest_main
+        helmath)
 
 target_link_libraries(vector4_swizzle_tests
         gtest
-        gtest_main)
+        gtest_main
+        helmath)
