--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ addons:
             - g++-5
             - gcc-5
 
+before_install:
+  - pip install --user cpp-coveralls
+
 install:
     - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
     - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
@@ -22,9 +25,14 @@ before_script:
     - cmake ..
 
 script:
+    - ./configure --enable-gcov
     - make
+    - make check
     - cd tests
     - ./all_tests
+
+after_success:
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
 
 notifications:
   recipients:
