--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,6 @@ addons:
             - g++-5
             - gcc-5
 
-before_install:
-  - pip install --user cpp-coveralls
-
 install:
     - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
     - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
@@ -22,17 +19,13 @@ install:
 before_script:
     - mkdir build
     - cd build
-    - cmake ..
+    - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug ..
 
 script:
-    - ./configure --enable-gcov
     - make
-    - make check
+    - make coveralls
     - cd tests
     - ./all_tests
-
-after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
 
 notifications:
   recipients:
