--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,24 @@
 cmake_minimum_required(VERSION 2.8)
 project(helmath)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
+
+option(COVERALLS "Generate coveralls data" OFF)
+
+if (COVERALLS)
+    include(Coveralls)
+    coveralls_turn_on_coverage()
+
+    set(COVERAGE_SRCS src/helmath.cpp)
+
+    # Create the coveralls target.
+    coveralls_setup(
+            "${COVERAGE_SRCS}" # The source files.
+            ON                 # If we should upload.
+            )
+endif()
 
 include_directories(src/include)
 
