--- a/.travis.yml
+++ b/.travis.yml
@@ -12,22 +12,28 @@ addons:
             - g++-5
             - gcc-5
 
+before_install:
+  - pip install --user cpp-coveralls
+
 install:
     - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
     - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
 
 before_script:
-    - export COVERALLS_SERVICE_NAME=travis-ci
-    - export COVERALLS_REPO_TOKEN=abc12345
     - mkdir build
     - cd build
+    - export COVERALLS_SERVICE_NAME=travis-ci
+    - export COVERALLS_REPO_TOKEN=abc12345
     - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug ..
 
 script:
     - make
-    - make coveralls
+    - make check
     - cd tests
     - ./all_tests
+
+after_success:
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
 
 notifications:
   recipients:
