Trying to integrate Coveralls. Attempt no.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,11 @@ install:
 before_script:
     - mkdir build
     - cd build
-    - export COVERALLS_SERVICE_NAME=travis-ci
-    - export COVERALLS_REPO_TOKEN=abc12345
     - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug ..
 
 script:
     - make
+    - make coveralls
     - cd tests
     - ./all_tests
 
