--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,11 @@ addons:
             - clang-3.7
             - g++-5
             - gcc-5
+            - libffi-dev
+            - libssl-dev
 
 before_install:
+  - pip install requests[security]
   - pip install --user cpp-coveralls
 
 install:
