Trying to integrate Coveralls. Attempt no.8

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
             - libssl-dev
 
 before_install:
-  - pip install requests[security]
+  - pip install pyopenssl ndg-httpsclient pyasn1
   - pip install --user cpp-coveralls
 
 install:
