--- a/.travis.yml
+++ b/.travis.yml
@@ -14,27 +14,41 @@ addons:
             - libffi-dev
             - libssl-dev
 
-before_install:
-    - sudo pip install pyopenssl ndg-httpsclient pyasn1
-    - sudo pip install --user cpp-coveralls
-
 install:
     - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
     - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
+    # install GTest and GMock
+    - sudo apt-get -qq install libgtest-dev
+    - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
+    - sudo apt-get -qq install google-mock
+    - "cd /usr/src/gmock && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
+    # install latest LCOV (1.9 was failing)
+    - cd ${TRAVIS_BUILD_DIR}
+    - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+    - tar xf lcov_1.11.orig.tar.gz
+    - sudo make -C lcov-1.11/ install
+    - gem install coveralls-lcov
+    - lcov --version
 
 before_script:
+    - cd ${TRAVIS_BUILD_DIR}
+    # init coverage to 0 (optional)
+    - lcov --directory . --zerocounters
     - mkdir build
     - cd build
     - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug ..
 
 script:
     - make
-    - make coveralls
     - cd tests
     - ./all_tests
 
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+    - cd ${TRAVIS_BUILD_DIR}
+    - lcov --directory . --capture --output-file coverage.info
+    - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
+    - lcov --list coverage.info
+    - coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info
 
 notifications:
   recipients:
