--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,15 @@ before_install:
 
 install:
     - sudo pip install requests[security]
+    - sudo apt-get install gcov
+    - sudo apt-get install lcov
     - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
     - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
 
 before_script:
+    - gcov -version
+    - gcc -version
+    - g++ -version
     - mkdir build
     - cd build
     - cmake -DCOVERAGE=ON ..
