Trying to integrate Coveralls. Attempt no.0000000

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ install:
 
 before_script:
     - gcov -version
-    - gcc -version
-    - g++ -version
+    - gcc -v
+    - g++ -v
     - mkdir build
     - cd build
     - cmake -DCOVERAGE=ON ..
