Trying to integrate Coveralls. Attempt no.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,9 +40,8 @@ script:
     - cd tests
     - ./all_tests
     - cd CMakeFiles/all_tests.dir/
-    - mv matrix/matrix2/*.*.gc* .
 #    - find . -type f -iname "*.gc*" -exec mv {} . \;
-    - lcov -c -d . -o all_tests.info
+    - lcov -c -d . -compat split_crc=on -o all_tests.info
 
 after_success:
   - lcoveralls --root .. -v
