--- a/.travis.yml
+++ b/.travis.yml
@@ -40,9 +40,10 @@ script:
     - find . -iname "*.gcda" -type f -exec mv {} . \;
     - find . -iname "*.o" -type f -exec mv {} . \;
     - find . -iname "*.gcno" -type f -exec mv {} . \;
+    - find . -iname "*.gcno" -type f -exec gcov {} \;
 
 after_success:
-    - codecov
+    - codecov -X gcov
 
 notifications:
   recipients:
