--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,14 @@ before_install:
    - sudo pip install codecov
 
 install:
-    - sudo apt-get install lcov
-    - if [ "$CXX" = "g++" ]; then export CXX="/usr/bin/g++-5" CC="/usr/bin/gcc-5"; fi
-    - if [ "$CXX" = "g++" ]; then echo "USING g++"; fi
+    - sudo apt-get install gcc-5 g++-5
+    - sudo update-alternatives
+    - sudo update-alternatives --remove-all gcc
+    - sudo update-alternatives --remove-all g++
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 20
+    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 20
+    - sudo update-alternatives --config gcc
+    - sudo update-alternatives --config g++
 
 before_script:
     - gcov -version
